--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ environment:
 # Add regular dependencies here.
 dependencies:
   equatable: ^2.0.7
+  uuid: ^4.4.2
 
 dev_dependencies:
   lints: ^6.0.0
